--- a/package.json
+++ b/package.json
@@ -25,11 +25,29 @@
     "@dojo/loader": "~0.1.0",
     "@types/glob": "5.0.*",
     "@types/grunt": "0.4.*",
+    "@types/webpack": "^3.8.1",
     "@types/yargs": "^8.0.2",
     "codecov.io": "0.1.6",
     "grunt": "~1.0.1",
     "grunt-dojo2": "latest",
     "intern": "~4.1.0",
     "typescript": "~2.6.1"
+  },
+  "dependencies": {
+    "@dojo/webpack-contrib": "^0.1.2",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "imports-loader": "^0.7.1",
+    "json-css-module-loader": "^1.0.2",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "promise-loader": "^1.0.0",
+    "source-map-loader-cli": "0.0.1",
+    "style-loader": "^0.19.0",
+    "tslint-loader": "^3.5.3",
+    "umd-compat-loader": "^2.1.1",
+    "webpack": "^3.8.1",
+    "webpack-mild-compile": "^1.0.0"
   }
 }
