--- a/package.json
+++ b/package.json
@@ -35,19 +35,28 @@
   },
   "dependencies": {
     "@dojo/webpack-contrib": "^0.1.2",
+    "auto-require-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "imports-loader": "^0.7.1",
     "json-css-module-loader": "^1.0.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
     "promise-loader": "^1.0.0",
     "source-map-loader-cli": "0.0.1",
     "style-loader": "^0.19.0",
+    "ts-loader": "^3.1.1",
+    "tslint": "^5.8.0",
     "tslint-loader": "^3.5.3",
+    "typed-css-modules": "^0.3.1",
+    "uglifyjs-webpack-plugin": "^1.1.0",
     "umd-compat-loader": "^2.1.1",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer-sunburst": "^1.3.0",
     "webpack-mild-compile": "^1.0.0"
   }
 }
