--- a/package.json
+++ b/package.json
@@ -36,18 +36,25 @@
   "dependencies": {
     "@dojo/webpack-contrib": "^0.1.2",
     "auto-require-webpack-plugin": "^1.0.1",
+    "chalk": "^2.3.0",
+    "cli-columns": "^3.1.2",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "globby": "^7.1.1",
+    "gzip-size": "^4.1.0",
     "html-webpack-plugin": "^2.30.1",
     "imports-loader": "^0.7.1",
     "json-css-module-loader": "^1.0.2",
+    "log-symbols": "^2.1.0",
+    "log-update": "^2.3.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "promise-loader": "^1.0.0",
     "source-map-loader-cli": "0.0.1",
+    "strip-ansi": "^4.0.0",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "tslint": "^5.8.0",
