--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "prepublish": "grunt peerDepInstall",
     "test": "grunt test"
   },
   "devDependencies": {
@@ -49,6 +48,7 @@
     "log-symbols": "^2.1.0",
     "log-update": "^2.3.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "pkg-dir": "^2.0.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
@@ -57,7 +57,7 @@
     "strip-ansi": "^4.0.0",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
-    "tslint": "^5.8.0",
+    "tslint": "^4.5.1",
     "tslint-loader": "^3.5.3",
     "typed-css-modules": "^0.3.1",
     "uglifyjs-webpack-plugin": "^1.1.0",
