--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,8 @@
 {
-	"version": "2.2.0",
 	"compilerOptions": {
 		"declaration": false,
 		"module": "commonjs",
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
+		"strict": true,
 		"outDir": "_build/",
 		"removeComments": false,
 		"sourceMap": true,
@@ -13,10 +10,6 @@
 		"moduleResolution": "node",
 		"importHelpers": true,
 		"downlevelIteration": true,
-		"typeRoots": [
-			"./node_modules/@types",
-			"./node_modules/intern/types"
-		],
 		"types": [ "intern" ],
 		"lib": [
 			"dom",
