--- a/package.json
+++ b/package.json
@@ -20,50 +20,50 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "@dojo/interfaces": "^0.1.0",
-    "@dojo/loader": "~0.1.0",
+    "@dojo/interfaces": "0.1.0",
+    "@dojo/loader": "0.1.0",
     "@types/glob": "5.0.*",
     "@types/grunt": "0.4.*",
-    "@types/webpack": "^3.8.1",
-    "@types/yargs": "^8.0.2",
+    "@types/webpack": "3.8.1",
+    "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
-    "grunt": "~1.0.1",
+    "grunt": "1.0.1",
     "grunt-dojo2": "latest",
     "intern": "~4.1.0",
     "typescript": "~2.6.1"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "^0.1.2",
-    "auto-require-webpack-plugin": "^1.0.1",
-    "chalk": "^2.3.0",
-    "cli-columns": "^3.1.2",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "globby": "^7.1.1",
-    "gzip-size": "^4.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "imports-loader": "^0.7.1",
-    "json-css-module-loader": "^1.0.2",
-    "log-symbols": "^2.1.0",
-    "log-update": "^2.3.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "pkg-dir": "^2.0.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "promise-loader": "^1.0.0",
+    "@dojo/webpack-contrib": "~0.1.2",
+    "auto-require-webpack-plugin": "1.0.1",
+    "chalk": "2.3.0",
+    "cli-columns": "3.1.2",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "globby": "7.1.1",
+    "gzip-size": "4.1.0",
+    "html-webpack-plugin": "2.30.1",
+    "imports-loader": "0.7.1",
+    "json-css-module-loader": "1.0.2",
+    "log-symbols": "2.1.0",
+    "log-update": "2.3.0",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "pkg-dir": "2.0.0",
+    "postcss-cssnext": "3.0.2",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
+    "promise-loader": "1.0.0",
     "source-map-loader-cli": "0.0.1",
-    "strip-ansi": "^4.0.0",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^3.1.1",
-    "tslint": "^4.5.1",
-    "tslint-loader": "^3.5.3",
-    "typed-css-modules": "^0.3.1",
-    "uglifyjs-webpack-plugin": "^1.1.0",
-    "umd-compat-loader": "^2.1.1",
-    "webpack": "^3.8.1",
-    "webpack-bundle-analyzer-sunburst": "^1.3.0",
-    "webpack-mild-compile": "^1.0.0"
+    "strip-ansi": "4.0.0",
+    "style-loader": "0.19.0",
+    "ts-loader": "3.1.1",
+    "tslint": "4.5.1",
+    "tslint-loader": "3.5.3",
+    "typed-css-modules": "0.3.1",
+    "uglifyjs-webpack-plugin": "1.1.0",
+    "umd-compat-loader": "2.1.1",
+    "webpack": "3.8.1",
+    "webpack-bundle-analyzer-sunburst": "1.3.0",
+    "webpack-mild-compile": "1.0.0"
   }
 }
