--- a/package.json
+++ b/package.json
@@ -22,8 +22,17 @@
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
     "@dojo/loader": "0.1.0",
+    "@types/chalk": "^2.2.0",
+    "@types/extract-text-webpack-plugin": "^3.0.0",
     "@types/glob": "5.0.*",
+    "@types/globby": "^6.1.0",
     "@types/grunt": "0.4.*",
+    "@types/gzip-size": "^4.0.0",
+    "@types/html-webpack-plugin": "^2.30.1",
+    "@types/log-symbols": "^2.0.0",
+    "@types/log-update": "^2.0.0",
+    "@types/optimize-css-assets-webpack-plugin": "^1.3.1",
+    "@types/strip-ansi": "^3.0.0",
     "@types/webpack": "3.8.1",
     "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
