--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/log-symbols": "^2.0.0",
     "@types/log-update": "^2.0.0",
+    "@types/mockery": "^1.4.29",
     "@types/optimize-css-assets-webpack-plugin": "^1.3.1",
+    "@types/sinon": "^4.0.0",
     "@types/strip-ansi": "^3.0.0",
     "@types/webpack": "3.8.1",
     "@types/yargs": "8.0.2",
@@ -39,6 +41,8 @@
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
     "intern": "~4.1.0",
+    "mockery": "^2.1.0",
+    "sinon": "^4.1.2",
     "typescript": "~2.6.1"
   },
   "dependencies": {
