--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dojo/cli-build-app",
-  "version": "2.0.0-pre",
+  "version": "0.1.0-pre",
   "description": "CLI command to build Dojo 2 applications",
   "engines": {
     "npm": ">=3.0.0"
@@ -29,6 +29,7 @@
     "@types/grunt": "0.4.*",
     "@types/gzip-size": "^4.0.0",
     "@types/html-webpack-plugin": "^2.30.1",
+    "@types/jsonfile": "^4.0.1",
     "@types/log-symbols": "^2.0.0",
     "@types/log-update": "^2.0.0",
     "@types/mockery": "^1.4.29",
@@ -58,6 +59,7 @@
     "html-webpack-plugin": "2.30.1",
     "imports-loader": "0.7.1",
     "json-css-module-loader": "1.0.2",
+    "jsonfile": "^4.0.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
