--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "npm run build-test-artifact && cd tests/test-app && npm i && grunt test",
+    "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz"
   },
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
     "@dojo/loader": "0.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/execa": "^0.8.0",
     "@types/extract-text-webpack-plugin": "^3.0.0",
     "@types/glob": "5.0.*",
     "@types/globby": "^6.1.0",
@@ -34,15 +36,18 @@
     "@types/log-update": "^2.0.0",
     "@types/mockery": "^1.4.29",
     "@types/optimize-css-assets-webpack-plugin": "^1.3.1",
+    "@types/rimraf": "^2.0.2",
     "@types/sinon": "^4.0.0",
     "@types/strip-ansi": "^3.0.0",
     "@types/webpack": "3.8.1",
     "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
+    "execa": "^0.8.0",
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
     "intern": "~4.1.0",
     "mockery": "^2.1.0",
+    "rimraf": "^2.6.2",
     "sinon": "^4.1.2",
     "typescript": "~2.6.1"
   },
