--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "execa": "^0.8.0",
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
+    "grunt-tslint": "^5.0.1",
     "intern": "~4.1.0",
     "mockery": "^2.1.0",
+    "prettier": "^1.8.2",
     "rimraf": "^2.6.2",
     "sinon": "^4.1.2",
+    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "~2.6.1"
   },
   "dependencies": {
@@ -77,8 +80,8 @@
     "strip-ansi": "4.0.0",
     "style-loader": "0.19.0",
     "ts-loader": "3.1.1",
-    "tslint": "4.5.1",
-    "tslint-loader": "3.5.3",
+    "tslint": "^5.8.0",
+    "tslint-loader": "^3.5.3",
     "typed-css-modules": "0.3.1",
     "uglifyjs-webpack-plugin": "1.1.0",
     "umd-compat-loader": "2.1.1",
