--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "typescript": "~2.6.1"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "~0.1.2",
+    "@dojo/webpack-contrib": "0.1.2",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
     "cli-columns": "3.1.2",
@@ -81,8 +81,8 @@
     "strip-ansi": "4.0.0",
     "style-loader": "0.19.0",
     "ts-loader": "3.1.1",
-    "tslint": "^5.8.0",
-    "tslint-loader": "^3.5.3",
+    "tslint": "5.8.0",
+    "tslint-loader": "3.5.3",
     "typed-css-modules": "0.3.1",
     "uglifyjs-webpack-plugin": "1.1.0",
     "umd-compat-loader": "2.1.1",
