--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jsonfile": "^4.0.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
+    "normalize-newline": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "pkg-dir": "2.0.0",
     "postcss-cssnext": "3.0.2",
