--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "test": "npm run build-test-artifact && cd test-app && rm -rf node_modules && npm i && grunt test",
     "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
-    "prettier": "./node_modules/.bin/prettier --single-quote --use-tabs --print-width 120 --parser typescript --write src/**/*.ts tests/**/*.ts"
+    "prettier": "./node_modules/.bin/prettier --single-quote --use-tabs --print-width 120 --parser typescript --write src/**/*.ts tests/**/*.ts",
+    "generate-fixtures": "cd test-app && npm run generate-fixtures && cd .."
   },
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
