--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dojo/interfaces": "0.1.0",
     "@dojo/loader": "0.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/clean-webpack-plugin": "^0.1.0",
     "@types/execa": "^0.8.0",
     "@types/extract-text-webpack-plugin": "^3.0.0",
     "@types/glob": "5.0.*",
@@ -42,6 +43,7 @@
     "@types/sinon": "^4.0.0",
     "@types/strip-ansi": "^3.0.0",
     "@types/webpack": "3.8.1",
+    "@types/webpack-manifest-plugin": "^1.3.1",
     "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
     "execa": "^0.8.0",
@@ -61,6 +63,7 @@
     "@dojo/webpack-contrib": "0.1.2",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
+    "clean-webpack-plugin": "^0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
@@ -90,6 +93,7 @@
     "umd-compat-loader": "2.1.1",
     "webpack": "3.8.1",
     "webpack-bundle-analyzer-sunburst": "1.3.0",
+    "webpack-manifest-plugin": "^1.3.2",
     "webpack-mild-compile": "1.0.0"
   }
 }
