--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/sinon": "^4.0.0",
     "@types/strip-ansi": "^3.0.0",
     "@types/webpack": "3.8.1",
+    "@types/webpack-chunk-hash": "^0.4.0",
     "@types/webpack-manifest-plugin": "^1.3.1",
     "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
@@ -60,7 +61,7 @@
     "typescript": "~2.6.1"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "0.1.2",
+    "@dojo/webpack-contrib": "~0.1.3",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
     "clean-webpack-plugin": "^0.1.17",
@@ -81,7 +82,6 @@
     "postcss-cssnext": "3.0.2",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.8",
-    "promise-loader": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "4.0.0",
     "style-loader": "0.19.0",
@@ -93,6 +93,7 @@
     "umd-compat-loader": "2.1.1",
     "webpack": "3.8.1",
     "webpack-bundle-analyzer-sunburst": "1.3.0",
+    "webpack-chunk-hash": "^0.5.0",
     "webpack-manifest-plugin": "^1.3.2",
     "webpack-mild-compile": "1.0.0"
   }
