--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "umd-compat-loader": "2.1.1",
     "webpack": "3.8.1",
     "webpack-bundle-analyzer-sunburst": "1.3.0",
-    "webpack-chunk-hash": "^0.5.0",
-    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-chunk-hash": "0.5.0",
+    "webpack-manifest-plugin": "1.3.2",
     "webpack-mild-compile": "1.0.0"
   }
 }
