--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ test_script:
   - npm --version
   # run tests
   - node_modules\.bin\grunt.cmd
-  - node_modules\.bin\grunt.cmd intern:node --test-reporter --color
+  - npm test
   - node_modules\.bin\grunt.cmd uploadCoverage
 
 # Don't actually build.
