--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "test": "npm run build-test-artifact && cd test-app && rm -rf node_modules && npm i && grunt test",
-    "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
-    "prettier": "./node_modules/.bin/prettier --single-quote --use-tabs --print-width 120 --parser typescript --write src/**/*.ts tests/**/*.ts",
-    "generate-fixtures": "cd test-app && npm run generate-fixtures && cd .."
+    "test": "npm run build-test-artifact && shx cd test-app && shx rm -rf node_modules && npm i && grunt test",
+    "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && shx mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
+    "prettier": "prettier --write src/**/*.ts tests/**/*.ts",
+    "generate-fixtures": "cd test-app && npm run generate-fixtures && cd ..",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
@@ -51,11 +58,15 @@
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
     "grunt-tslint": "^5.0.1",
+    "husky": "^0.14.3",
     "intern": "~4.1.0",
+    "lint-staged": "^6.0.0",
     "mockery": "^2.1.0",
     "normalize-newline": "^3.0.0",
     "prettier": "^1.8.2",
     "rimraf": "^2.6.2",
+    "shelljs": "^0.7.8",
+    "shx": "^0.2.2",
     "sinon": "^4.1.2",
     "tslint-plugin-prettier": "^1.3.0",
     "typescript": "~2.6.1"
