--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"removeComments": false,
 		"sourceMap": true,
 		"target": "es5",
+		"noUnusedLocals": true,
 		"moduleResolution": "node",
 		"importHelpers": true,
 		"downlevelIteration": true,
