package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/gzip-size": "^4.0.0",
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/jsonfile": "^4.0.1",
+    "@types/loader-utils": "^1.1.0",
     "@types/log-symbols": "^2.0.0",
     "@types/log-update": "^2.0.0",
     "@types/mockery": "^1.4.29",
@@ -86,6 +87,7 @@
     "imports-loader": "0.7.1",
     "json-css-module-loader": "1.0.2",
     "jsonfile": "^4.0.0",
+    "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -93,6 +95,7 @@
     "postcss-cssnext": "3.0.2",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.8",
+    "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "4.0.0",
     "style-loader": "0.19.0",
