--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
     "@dojo/loader": "0.1.0",
+    "@types/chai": "4.0.4",
     "@types/chalk": "^2.2.0",
     "@types/clean-webpack-plugin": "^0.1.0",
     "@types/execa": "^0.8.0",
