pin deps and new package-lock

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
     "@dojo/loader": "0.1.0",
-    "@types/chai": "4.0.4",
     "@types/chalk": "^2.2.0",
     "@types/clean-webpack-plugin": "^0.1.0",
     "@types/execa": "^0.8.0",
@@ -59,13 +58,13 @@
     "execa": "^0.8.0",
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
-    "grunt-tslint": "^5.0.1",
+    "grunt-tslint": "5.0.1",
     "husky": "^0.14.3",
     "intern": "~4.1.0",
     "lint-staged": "^6.0.0",
     "mockery": "^2.1.0",
     "normalize-newline": "^3.0.0",
-    "prettier": "^1.8.2",
+    "prettier": "1.8.2",
     "rimraf": "^2.6.2",
     "shelljs": "^0.7.8",
     "shx": "^0.2.2",
