--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "test": "npm run build-test-artifact && cd test-app && shx rm -rf node_modules && npm i && grunt test",
+    "test": "npm run build-test-artifact && cd test-app && shx rm -rf node_modules package-lock.json && npm i && grunt test",
     "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && shx mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
     "prettier": "prettier --write src/**/*.ts tests/**/*.ts",
     "generate-fixtures": "cd test-app && npm run generate-fixtures && cd ..",
