--- a/package.json
+++ b/package.json
@@ -35,50 +35,50 @@
   "devDependencies": {
     "@dojo/interfaces": "0.1.0",
     "@dojo/loader": "0.1.0",
-    "@types/chalk": "^2.2.0",
-    "@types/clean-webpack-plugin": "^0.1.0",
-    "@types/execa": "^0.8.0",
-    "@types/extract-text-webpack-plugin": "^3.0.0",
+    "@types/chalk": "2.2.0",
+    "@types/clean-webpack-plugin": "0.1.0",
+    "@types/execa": "0.8.0",
+    "@types/extract-text-webpack-plugin": "3.0.0",
     "@types/glob": "5.0.*",
-    "@types/globby": "^6.1.0",
+    "@types/globby": "6.1.0",
     "@types/grunt": "0.4.*",
-    "@types/gzip-size": "^4.0.0",
-    "@types/html-webpack-plugin": "^2.30.1",
-    "@types/jsonfile": "^4.0.1",
-    "@types/loader-utils": "^1.1.0",
-    "@types/log-symbols": "^2.0.0",
-    "@types/log-update": "^2.0.0",
-    "@types/mockery": "^1.4.29",
-    "@types/optimize-css-assets-webpack-plugin": "^1.3.1",
-    "@types/rimraf": "^2.0.2",
-    "@types/sinon": "^4.0.0",
-    "@types/strip-ansi": "^3.0.0",
+    "@types/gzip-size": "4.0.0",
+    "@types/html-webpack-plugin": "2.30.1",
+    "@types/jsonfile": "4.0.1",
+    "@types/loader-utils": "1.1.0",
+    "@types/log-symbols": "2.0.0",
+    "@types/log-update": "2.0.0",
+    "@types/mockery": "1.4.29",
+    "@types/optimize-css-assets-webpack-plugin": "1.3.1",
+    "@types/rimraf": "2.0.2",
+    "@types/sinon": "4.0.0",
+    "@types/strip-ansi": "3.0.0",
     "@types/webpack": "3.8.1",
-    "@types/webpack-chunk-hash": "^0.4.0",
-    "@types/webpack-manifest-plugin": "^1.3.1",
+    "@types/webpack-chunk-hash": "0.4.0",
+    "@types/webpack-manifest-plugin": "1.3.1",
     "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
-    "execa": "^0.8.0",
+    "execa": "0.8.0",
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
     "grunt-tslint": "5.0.1",
-    "husky": "^0.14.3",
+    "husky": "0.14.3",
     "intern": "~4.1.0",
-    "lint-staged": "^6.0.0",
-    "mockery": "^2.1.0",
+    "lint-staged": "6.0.0",
+    "mockery": "2.1.0",
     "prettier": "1.8.2",
-    "rimraf": "^2.6.2",
-    "shelljs": "^0.7.8",
-    "shx": "^0.2.2",
-    "sinon": "^4.1.2",
-    "tslint-plugin-prettier": "^1.3.0",
+    "rimraf": "2.6.2",
+    "shelljs": "0.7.8",
+    "shx": "0.2.2",
+    "sinon": "4.1.2",
+    "tslint-plugin-prettier": "1.3.0",
     "typescript": "~2.6.1"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "~0.1.3",
+    "@dojo/webpack-contrib": "~0.1.4",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
-    "clean-webpack-plugin": "^0.1.17",
+    "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
@@ -88,7 +88,7 @@
     "html-webpack-plugin": "2.30.1",
     "imports-loader": "0.7.1",
     "json-css-module-loader": "1.0.2",
-    "jsonfile": "^4.0.0",
+    "jsonfile": "4.0.0",
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
