--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test-ci": "npm run setup-tests && grunt dev && grunt intern:node --test-reporter --color",
     "setup-tests": "npm run build-test-artifact && cd test-app && shx rm -rf node_modules package-lock.json && npm i",
     "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && shx mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
-    "prettier": "prettier --write src/**/*.ts tests/**/*.ts",
+    "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'",
     "generate-unix-fixtures": "cd test-app && npm run generate-unix-fixtures && cd ..",
     "generate-windows-fixtures": "cd test-app && npm run generate-windows-fixtures && cd ..",
     "precommit": "lint-staged"
