--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "shx": "0.2.2",
     "sinon": "4.1.2",
     "tslint-plugin-prettier": "1.3.0",
-    "typescript": "~2.6.1"
+    "typescript": "~2.6.1",
+    "webpack-pwa-manifest": "^3.3.4"
   },
   "dependencies": {
     "@dojo/webpack-contrib": "~0.1.5",
