--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
+    "express": "~4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "globby": "7.1.1",
@@ -112,6 +113,8 @@
     "webpack": "3.8.1",
     "webpack-bundle-analyzer-sunburst": "1.3.0",
     "webpack-chunk-hash": "0.5.0",
+    "webpack-dev-middleware": "~2.0.2",
+    "webpack-hot-middleware": "~2.21.0",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-mild-compile": "1.0.0",
     "webpack-pwa-manifest": "~3.3.4"
