Add manifest to test app

--- a/test-app/.dojorc
+++ b/test-app/.dojorc
@@ -9,6 +9,12 @@
 				"src/Bar",
 				"src/Baz"
 			]
+		},
+		"pwa": {
+			"manifest": {
+				"name": "Test App",
+				"description": "A test application for @dojo/cli-build-app"
+			}
 		}
 	}
 }
