--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "shx": "0.2.2",
     "sinon": "4.1.2",
     "tslint-plugin-prettier": "1.3.0",
-    "typescript": "~2.6.1",
-    "webpack-pwa-manifest": "^3.3.4"
+    "typescript": "~2.6.1"
   },
   "dependencies": {
     "@dojo/webpack-contrib": "~0.1.5",
@@ -112,6 +111,7 @@
     "webpack-bundle-analyzer-sunburst": "1.3.0",
     "webpack-chunk-hash": "0.5.0",
     "webpack-manifest-plugin": "1.3.2",
-    "webpack-mild-compile": "1.0.0"
+    "webpack-mild-compile": "1.0.0",
+    "webpack-pwa-manifest": "~3.3.4"
   }
 }
