--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/log-update": "2.0.0",
     "@types/mockery": "1.4.29",
     "@types/optimize-css-assets-webpack-plugin": "1.3.1",
+    "@types/ora": "^1.3.1",
     "@types/rimraf": "2.0.2",
     "@types/sinon": "4.0.0",
     "@types/strip-ansi": "3.0.0",
@@ -93,6 +94,7 @@
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
+    "ora": "1.3.0",
     "pkg-dir": "2.0.0",
     "postcss-cssnext": "3.0.2",
     "postcss-import": "11.0.0",
