--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "webpack-bundle-analyzer-sunburst": "1.3.0",
     "webpack-chunk-hash": "0.5.0",
     "webpack-manifest-plugin": "1.3.2",
-    "webpack-mild-compile": "1.0.0"
+    "webpack-mild-compile": "1.0.0",
+    "webpack-pwa-manifest": "~3.3.4"
   }
 }
