--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/log-update": "2.0.0",
     "@types/mockery": "1.4.29",
     "@types/optimize-css-assets-webpack-plugin": "1.3.1",
-    "@types/ora": "^1.3.1",
+    "@types/ora": "1.3.1",
     "@types/rimraf": "2.0.2",
     "@types/sinon": "4.0.0",
     "@types/strip-ansi": "3.0.0",
@@ -93,6 +93,7 @@
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
+    "offline-plugin": "4.9.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
@@ -103,6 +104,7 @@
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "4.0.0",
     "style-loader": "0.19.0",
+    "sw-toolbox": "3.6.0",
     "ts-loader": "3.1.1",
     "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
