Implement service worker integration
- Add offline plugin to base config
- Add service worker entry and handler
- Update test-app/dojorc
- Exclude offline plugin from test config
- Update fixtures and tests

--- a/test-app/.dojorc
+++ b/test-app/.dojorc
@@ -16,6 +16,13 @@
 			"manifest": {
 				"name": "Test App",
 				"description": "A test application for @dojo/cli-build-app"
+			},
+			"serviceWorker": {
+				"request": [{
+					"method": "get",
+					"path": "/",
+					"strategy": "fastest"
+				}]
 			}
 		}
 	}
