--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/chalk": "2.2.0",
     "@types/clean-webpack-plugin": "0.1.0",
     "@types/execa": "0.8.0",
+    "@types/express": "4.11.0",
     "@types/extract-text-webpack-plugin": "3.0.0",
     "@types/glob": "5.0.*",
     "@types/globby": "6.1.0",
@@ -82,7 +83,7 @@
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
-    "express": "~4.16.2",
+    "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "globby": "7.1.1",
