--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@dojo/webpack-contrib": "~0.1.6",
+    "@theintern/istanbul-loader": "~1.0.0-beta.1",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
     "clean-webpack-plugin": "0.1.17",
