--- a/package.json
+++ b/package.json
@@ -83,13 +83,14 @@
     "@types/webpack": "3.8.1",
     "@types/webpack-chunk-hash": "0.4.0",
     "@types/webpack-manifest-plugin": "1.3.1",
-    "@types/yargs": "^10.0.0",
+    "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
     "cypress": "^3.0.1",
     "execa": "0.8.0",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
+    "intern": "~4.1.0",
     "lint-staged": "6.0.0",
     "mockery": "2.1.0",
     "npm-run-all": "~4.1.3",
@@ -112,6 +113,7 @@
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "html-webpack-include-assets-plugin": "1.0.2",
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
