--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
     "express": "4.16.2",
+    "express-history-api-fallback": "^2.2.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "globby": "7.1.1",
