--- a/package.json
+++ b/package.json
@@ -79,13 +79,14 @@
   "dependencies": {
     "@dojo/webpack-contrib": "~0.1.6",
     "@theintern/istanbul-loader": "~1.0.0-beta.1",
+    "@types/connect-history-api-fallback": "^1.3.1",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "0.28.7",
     "express": "4.16.2",
-    "express-history-api-fallback": "^2.2.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "globby": "7.1.1",
