add shim dependency and browser import (#60)
* change to shim v0.2.6

* add peer deps, update unix fixtures

* windows fixtures

* re-wrapped, generated fixtures

* re-wrapped, generated fixtures

* 0.2.6

* Update package metadata

* Revert "Update package metadata"

This reverts commit acf7e12be71649fcac46bcf911cdc46c45569a3b.

* Revert "0.2.6"

This reverts commit c3d64fbe567ff36b75287cf9161a29dbcc56fac6.

* add shim entry to base config

* new fixtures

* new windows fixtures

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     ]
   },
   "devDependencies": {
-    "@dojo/cli": "0.6.0",
+    "@dojo/cli": "0.6.1",
     "@dojo/loader": "0.1.0",
     "@types/chalk": "2.2.0",
     "@types/clean-webpack-plugin": "0.1.0",
@@ -76,6 +76,7 @@
     "typescript": "2.6.1"
   },
   "dependencies": {
+    "@dojo/shim": "~0.2.6",
     "@dojo/webpack-contrib": "0.1.6",
     "@theintern/istanbul-loader": "1.0.0-beta.1",
     "auto-require-webpack-plugin": "1.0.1",
