Add build-time-render support

--- a/test-app/.dojorc
+++ b/test-app/.dojorc
@@ -17,6 +17,9 @@
 				"name": "Test App",
 				"description": "A test application for @dojo/cli-build-app"
 			}
+		},
+		"build-time-render": {
+			"root": "app"
 		}
 	}
 }
