Remove unneeded importHelpers for cli
Refs https://github.com/dojo/meta/issues/226

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"target": "es5",
 		"noUnusedLocals": true,
 		"moduleResolution": "node",
-		"importHelpers": true,
+		"importHelpers": false,
 		"downlevelIteration": true,
 		"types": [ "intern" ],
 		"lib": [
