--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/rimraf": "2.0.2",
     "@types/sinon": "4.0.0",
     "@types/strip-ansi": "3.0.0",
+    "@types/tapable": "0.2.4",
     "@types/webpack": "3.8.1",
     "@types/webpack-chunk-hash": "0.4.0",
     "@types/webpack-manifest-plugin": "1.3.1",
@@ -76,7 +77,7 @@
     "typescript": "2.6.1"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "0.2.4",
+    "@dojo/webpack-contrib": "0.2.5",
     "@theintern/istanbul-loader": "1.0.0-beta.1",
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.3.0",
