--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/log-symbols": "2.0.0",
     "@types/log-update": "2.0.0",
     "@types/mockery": "1.4.29",
+    "@types/node": "~9.6.5",
     "@types/optimize-css-assets-webpack-plugin": "1.3.1",
     "@types/ora": "1.3.1",
     "@types/rimraf": "2.0.2",
