--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 - travis_retry npm install
 script:
 - grunt
-- npm run test-ci
+- npm run test:ci
 - grunt uploadCoverage
 notifications:
   slack:
