--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "test": "npm run setup-tests && grunt test --color",
-    "test-ci": "npm run setup-tests && grunt dev && grunt intern:node --test-reporter --color",
-    "setup-tests": "npm run build-test-artifact && cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
-    "build-test-artifact": "grunt dist && grunt release-publish-flat --dry-run && shx mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
+    "test:ci": "run-p --race serve test",
+    "serve": "http-server -p 9999 -c-1 --silent",
+    "test": "npm run artefact:package && npm run artefact:install && grunt dev && grunt intern:node --test-reporter --color && npm run artefact:build && cypress run",
+    "artefact:build": "cd test-app && npm run build:dist && npm run build:dev",
+    "artefact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
+    "artefact:package": "grunt dist && grunt release-publish-flat --dry-run && shx mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
     "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'",
-    "generate-unix-fixtures": "cd test-app && npm run generate-unix-fixtures && cd ..",
-    "generate-windows-fixtures": "cd test-app && npm run generate-windows-fixtures && cd ..",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -61,14 +61,17 @@
     "@types/webpack-manifest-plugin": "1.3.1",
     "@types/yargs": "8.0.2",
     "codecov.io": "0.1.6",
+    "cypress": "^3.0.1",
     "execa": "0.8.0",
     "grunt": "1.0.1",
     "grunt-dojo2": "latest",
     "grunt-tslint": "5.0.1",
+    "http-server": "^0.11.1",
     "husky": "0.14.3",
     "intern": "4.1.0",
     "lint-staged": "6.0.0",
     "mockery": "2.1.0",
+    "npm-run-all": "^4.1.3",
     "prettier": "1.8.2",
     "rimraf": "2.6.2",
     "shelljs": "0.7.8",
