Update REAMDE and tests; minor fix
- Update README
- Add missing util tests, as well as a functional test for the PWA meta
  tags
- Fix: use `cachePrefix` from dojorc over package.json `name`

--- a/test-app/.dojorc
+++ b/test-app/.dojorc
@@ -19,6 +19,14 @@
 			"manifest": {
 				"name": "Test App",
 				"description": "A test application for @dojo/cli-build-app"
+			},
+			"serviceWorker": {
+				"clientsClaim": true,
+				"excludeBundles": [ "src/LazyWidget" ],
+				"routes": [
+					{ "urlPattern": "\\.(jpg|png|gif|svg)$", "strategy": "cacheFirst", "expiration": { "maxEntries": 25 } },
+					{ "urlPattern": "/api", "strategy": "networkFirst" }
+				]
 			}
 		},
 		"build-time-render": {
