--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dojo/cli-build-app",
-  "version": "2.0.4-pre",
+  "version": "3.0.0-pre",
   "description": "CLI command to build Dojo 2 applications",
   "engines": {
     "npm": ">=3.0.0"
@@ -17,14 +17,28 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
+    "artifact:build": "cd test-app && npm run build:dist:evergreen && shx mv output/dist output/dist-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-evergreen && npm run build:dist && npm run build:dev && npm run build:dist:evergreen",
+    "artifact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
+    "artifact:package": "cd dist && npm pack -q ./release && shx mv dojo-cli-build-app-* dojo-cli-build-app.tgz && cd ..",
+    "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev",
+    "build:static:release": "cpx \"src/**/*.{d.ts,json}\" dist/release",
+    "build:cjs": "tsc",
+    "build": "npm-run-all -p build:** -s package",
+    "clean": "rimraf dist coverage output test-app/output",
+    "intern": "intern",
+    "lint:tslint": "tslint -p .",
+    "lint:prettier": "prettier -l \"{src,tests}/**/*.{ts,tsx}\"",
+    "lint": "run-p lint:*",
+    "package": "dojo-package",
+    "precommit": "lint-staged",
+    "prettier": "prettier --write \"{src,tests}/**/*.{ts,tsx}\"",
     "test:ci": "run-p --race serve test",
+    "test:cypress": "cypress run",
+    "test": "run-s lint build artifact:package artifact:install build intern artifact:build test:cypress",
     "serve": "http-server -p 9999 -c-1 --silent",
-    "test": "npm run artefact:package && npm run artefact:install && grunt dev && grunt intern:node --test-reporter --color && npm run artefact:build && cypress run",
-    "artefact:build": "cd test-app && npm run build:dist:evergreen && shx mv output/dist output/dist-evergreen  && npm run build:dev:evergreen && shx mv output/dev output/dev-evergreen && npm run build:dist && npm run build:dev && npm run build:dist:evergreen",
-    "artefact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
-    "artefact:package": "grunt dist && grunt release-publish-flat --dry-run && shx mv dist/dojo-cli-build-app-* dist/dojo-cli-build-app.tgz",
-    "prettier": "prettier --write 'src/**/*.ts' 'tests/**/*.ts'",
-    "precommit": "lint-staged"
+    "uploadCoverage": "codecov --file=coverage/coverage.json",
+    "watch:ts": "dojo-tsc-watcher -p tsconfig.json -- dojo-package",
+    "watch": "run-p watch:ts \"build:static:** -- --watch\""
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -32,16 +46,22 @@
       "git add"
     ]
   },
+  "prettier": {
+    "singleQuote": true,
+    "tabWidth": 4,
+    "useTabs": true,
+    "parser": "typescript",
+    "printWidth": 120,
+    "arrowParens": "always"
+  },
   "devDependencies": {
-    "@dojo/cli": "2.0.0",
-    "@types/chalk": "2.2.0",
+    "@dojo/cli": "^3.0.0-alpha.1",
+    "@dojo/scripts": "^3.0.0-alpha.6",
     "@types/clean-webpack-plugin": "0.1.0",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
     "@types/extract-text-webpack-plugin": "3.0.0",
-    "@types/glob": "5.0.35",
     "@types/globby": "6.1.0",
-    "@types/grunt": "0.4.*",
     "@types/gzip-size": "4.0.0",
     "@types/html-webpack-plugin": "2.30.3",
     "@types/jsonfile": "4.0.1",
@@ -53,37 +73,33 @@
     "@types/optimize-css-assets-webpack-plugin": "1.3.1",
     "@types/ora": "1.3.1",
     "@types/rimraf": "2.0.2",
-    "@types/sinon": "4.0.0",
+    "@types/sinon": "~4.3.3",
     "@types/strip-ansi": "3.0.0",
     "@types/tapable": "0.2.4",
     "@types/webpack": "3.8.1",
     "@types/webpack-chunk-hash": "0.4.0",
     "@types/webpack-manifest-plugin": "1.3.1",
-    "@types/yargs": "8.0.2",
-    "codecov.io": "0.1.6",
+    "@types/yargs": "^10.0.0",
+    "codecov": "~3.0.4",
+    "cpx": "~1.5.0",
     "cypress": "^3.0.1",
     "execa": "0.8.0",
-    "grunt": "1.0.1",
-    "grunt-dojo2": "latest",
-    "grunt-tslint": "5.0.1",
     "http-server": "^0.11.1",
-    "husky": "0.14.3",
-    "intern": "4.1.0",
+    "husky": "^0.14.3",
     "lint-staged": "6.0.0",
     "mockery": "2.1.0",
-    "npm-run-all": "^4.1.3",
-    "prettier": "1.8.2",
+    "npm-run-all": "~4.1.3",
     "rimraf": "2.6.2",
     "shelljs": "0.7.8",
     "shx": "0.2.2",
-    "sinon": "4.1.2",
-    "typescript": "2.6.1"
+    "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "2.0.2",
+    "@dojo/framework": "^3.0.0-alpha.1",
+    "@dojo/webpack-contrib": "^3.0.0-alpha.2",
     "@theintern/istanbul-loader": "1.0.0-beta.1",
     "auto-require-webpack-plugin": "1.0.1",
-    "chalk": "2.3.0",
+    "chalk": "~2.4.0",
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
@@ -110,8 +126,6 @@
     "strip-ansi": "4.0.0",
     "style-loader": "0.19.0",
     "ts-loader": "3.1.1",
-    "tslint": "5.8.0",
-    "tslint-loader": "3.5.3",
     "typed-css-modules": "0.3.1",
     "uglifyjs-webpack-plugin": "1.1.0",
     "umd-compat-loader": "2.1.1",
