--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,7 @@
 {
+	"extends": "./node_modules/@dojo/scripts/tsconfig/commonjs.json",
 	"compilerOptions": {
-		"declaration": false,
-		"module": "commonjs",
-		"strict": true,
-		"outDir": "_build/",
-		"removeComments": false,
-		"sourceMap": true,
-		"target": "es5",
-		"noUnusedLocals": true,
-		"moduleResolution": "node",
-		"importHelpers": false,
-		"downlevelIteration": true,
+		"target": "es2015",
 		"types": [ "intern", "cypress" ],
 		"lib": [
 			"dom",
