Fix the non-PWA build from failing

--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "artifact:build": "cd test-app && npm run build:dist:evergreen && shx mv output/dist output/dist-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-evergreen && npm run build:dist && npm run build:dev && npm run build:dist:evergreen",
+    "artifact:build:pwa": "cd test-app && shx cp -f .dojorc-pwa .dojorc && npm run build:dist:evergreen && shx mv output/dist output/dist-pwa-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-pwa-evergreen && npm run build:dist && shx mv output/dist output/dist-pwa && npm run build:dev && shx mv output/dev output/dev-pwa",
+    "artifact:build:app": "cd test-app && shx cp -f .dojorc-app .dojorc && npm run build:dist:evergreen && shx mv output/dist output/dist-app-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-app-evergreen && npm run build:dist && shx mv output/dist output/dist-app && npm run build:dev && shx mv output/dev output/dev-app",
     "artifact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
     "artifact:package": "cd dist && npm pack -q ./release && shx mv dojo-cli-build-app-* dojo-cli-build-app.tgz && cd ..",
     "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev",
     "build:static:release": "cpx \"src/**/*.{d.ts,json}\" dist/release",
     "build:cjs": "tsc",
     "build": "npm-run-all -p build:** -s package",
-    "clean": "rimraf dist coverage output test-app/output",
+    "clean": "rimraf dist coverage output test-app/output test-app/node_modules",
     "intern": "intern",
     "lint:tslint": "tslint -p .",
     "lint:prettier": "prettier -l \"{src,tests}/**/*.{ts,tsx}\"",
@@ -34,7 +35,7 @@
     "prettier": "prettier --write \"{src,tests}/**/*.{ts,tsx}\"",
     "test:ci": "run-p --race serve test",
     "test:cypress": "cypress run",
-    "test": "run-s lint build artifact:package artifact:install build intern artifact:build test:cypress",
+    "test": "run-s lint build artifact:package artifact:install build intern artifact:build:* test:cypress",
     "serve": "http-server -p 9999 -c-1 --silent",
     "uploadCoverage": "codecov --file=coverage/coverage.json",
     "watch:ts": "dojo-tsc-watcher -p tsconfig.json -- dojo-package",
