Adding proxy configuration

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/globby": "6.1.0",
     "@types/gzip-size": "4.0.0",
     "@types/html-webpack-plugin": "2.30.3",
+    "@types/http-proxy-middleware": "^0.17.5",
     "@types/jsonfile": "4.0.1",
     "@types/loader-utils": "1.1.0",
     "@types/log-symbols": "2.0.0",
@@ -114,6 +115,7 @@
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "http-proxy-middleware": "^0.19.0",
     "identity-loader": "1.0.1",
     "imports-loader": "0.7.1",
     "istanbul-instrumenter-loader": "3.0.1",
