Update webpack dependencies to v4
- Temporarily add local, upgraded `@dojo/webpack-contrib`
- Temporarily update package.json for CI
- Replace ExtractTextPlugin with MiniCssExtractPlugin, but pin to 0.4.2
  until https://github.com/danethurber/webpack-manifest-plugin/issues/167
  is resolved
- Replace removed CommonsChunkPlugin with `optimize.splitChunks`
  configuration option
- Remove plugins provided by `mode` configuration option:
  NamedChunksPlugin, NamedModulesPlugin, and DefinePlugin
- Use terser-webpack-plugin over uglifyjs-webpack-plugin-terser
- Upgrade to webpack-mild-compile@3.3.1
- Add runtime chunk, disable default chunk, and force modules into main
  chunk
- Filter css order warnings
- Move optimize-css-assets-webpack-plugin to dist config
- Update tapable typings

--- a/package.json
+++ b/package.json
@@ -58,32 +58,33 @@
     "arrowParens": "always"
   },
   "devDependencies": {
+    "@dojo/webpack-contrib": "./deps/dojo-webpack-contrib-5.0.0.tgz",
     "@dojo/cli": "^4.0.0",
     "@dojo/scripts": "~3.0.1",
-    "@types/clean-webpack-plugin": "0.1.0",
+    "@types/clean-webpack-plugin": "0.1.2",
     "@types/connect-history-api-fallback": "1.3.1",
     "@types/copy-webpack-plugin": "4.4.1",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
-    "@types/extract-text-webpack-plugin": "3.0.0",
     "@types/globby": "6.1.0",
     "@types/gzip-size": "4.0.0",
-    "@types/html-webpack-plugin": "2.30.3",
+    "@types/html-webpack-plugin": "3.2.0",
     "@types/http-proxy-middleware": "^0.17.5",
     "@types/jsonfile": "4.0.1",
-    "@types/loader-utils": "1.1.0",
+    "@types/loader-utils": "1.1.3",
     "@types/log-symbols": "2.0.0",
     "@types/log-update": "2.0.0",
+    "@types/mini-css-extract-plugin": "0.2.0",
     "@types/mockery": "1.4.29",
     "@types/node": "~9.6.5",
     "@types/ora": "1.3.1",
     "@types/rimraf": "2.0.2",
     "@types/sinon": "~4.3.3",
     "@types/strip-ansi": "3.0.0",
-    "@types/tapable": "0.2.4",
-    "@types/webpack": "3.8.1",
-    "@types/webpack-chunk-hash": "0.4.0",
-    "@types/webpack-manifest-plugin": "1.3.1",
+    "@types/tapable": "1.0.4",
+    "@types/webpack": "4.4.19",
+    "@types/webpack-chunk-hash": "0.4.2",
+    "@types/webpack-manifest-plugin": "1.3.2",
     "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
@@ -100,56 +101,54 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "next",
-    "brotli-webpack-plugin": "0.5.0",
+    "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
-    "clean-webpack-plugin": "0.1.17",
+    "clean-webpack-plugin": "1.0.0",
     "cli-columns": "3.1.2",
-    "compression-webpack-plugin": "1.1.7",
+    "compression-webpack-plugin": "2.0.0",
     "connect-history-api-fallback": "1.5.0",
-    "css-loader": "0.28.7",
+    "css-loader": "1.0.1",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "express-static-gzip": "1.1.3",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "2.0.0",
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "identity-loader": "1.0.1",
-    "imports-loader": "0.7.1",
+    "imports-loader": "0.8.0",
     "istanbul-instrumenter-loader": "3.0.1",
     "json-css-module-loader": "1.0.2",
     "jsonfile": "4.0.0",
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.4.2",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
     "postcss-import": "12.0.0",
-    "postcss-loader": "2.0.8",
+    "postcss-loader": "3.0.0",
     "postcss-preset-env": "5.3.0",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "3.0.1",
-    "style-loader": "0.19.0",
-    "ts-loader": "3.1.1",
+    "terser-webpack-plugin": "^1.1.0",
+    "ts-loader": "5.3.0",
     "ts-node": "7.0.1",
     "tslint": "5.8.0",
-    "tslint-loader": "3.5.3",
+    "tslint-loader": "3.5.4",
     "typed-css-modules": "0.3.1",
-    "uglifyjs-webpack-plugin-terser": "1.1.0",
     "umd-compat-loader": "2.1.1",
-    "webpack": "3.8.1",
-    "webpack-chunk-hash": "0.5.0",
-    "webpack-dev-middleware": "2.0.3",
-    "webpack-hot-middleware": "2.21.0",
-    "webpack-manifest-plugin": "1.3.2",
-    "webpack-mild-compile": "1.0.0",
-    "webpack-pwa-manifest": "3.6.2",
-    "wrapper-webpack-plugin": "1.0.0"
+    "webpack": "4.25.1",
+    "webpack-chunk-hash": "0.6.0",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3",
+    "webpack-manifest-plugin": "2.0.4",
+    "webpack-mild-compile": "3.3.1",
+    "webpack-pwa-manifest": "3.7.1",
+    "wrapper-webpack-plugin": "2.0.0"
   }
 }
