Serve compressed assets in dist mode
When serving in dist mode without memory watch, use express-static-gzip
instead of express.static in order to serve compressed build files.

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "css-loader": "0.28.7",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
+    "express-static-gzip": "1.1.3",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "globby": "7.1.1",
