Fix terser-webpack-plugin version

--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "3.0.1",
-    "terser-webpack-plugin": "^1.1.0",
+    "terser-webpack-plugin": "1.1.0",
     "ts-loader": "5.3.0",
     "ts-node": "7.0.1",
     "tslint": "5.8.0",
