Remove memory watch and implement reload with normal watch (#224)
* Remove memory watch and implement reload with normal watch

* remove dev middleware

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "cli-columns": "3.1.2",
     "compression-webpack-plugin": "2.0.0",
     "connect-history-api-fallback": "1.5.0",
+    "connect-inject": "0.4.0",
     "css-loader": "1.0.1",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
@@ -144,7 +145,6 @@
     "umd-compat-loader": "2.1.1",
     "webpack": "4.25.1",
     "webpack-chunk-hash": "0.6.0",
-    "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-mild-compile": "3.3.1",
