Use Application Base Path (#302)
* Configure application base url from dojorc via 'base' option - inject service worker into html

* Fix up unit tests

* use vendored deps

* mess with deps to run on ci temporarily

* Update deps

* fix deps

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "artifact:build:pwa": "cd test-app && shx cp -f .dojorc-pwa .dojorc && npm run build:dist:evergreen && shx mv output/dist output/dist-pwa-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-pwa-evergreen && npm run build:dist && shx mv output/dist output/dist-pwa && npm run build:dev && shx mv output/dev output/dev-pwa",
-    "artifact:build:app": "cd test-app && shx cp -f .dojorc-app .dojorc && npm run build:dist:evergreen && shx mv output/dist output/dist-app-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-app-evergreen && npm run build:dist && shx mv output/dist output/dist-app && npm run build:dev && shx mv output/dev output/dev-app",
+    "artifact:build:pwa": "cd test-app && npm run build:dist:pwa:evergreen && shx mv output/dist output/dist-pwa-evergreen && npm run build:dev:pwa:evergreen && shx mv output/dev output/dev-pwa-evergreen && npm run build:dist:pwa && shx mv output/dist output/dist-pwa && npm run build:dev:pwa && shx mv output/dev output/dev-pwa",
+    "artifact:build:app": "cd test-app && npm run build:dist:evergreen && shx mv output/dist output/dist-app-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-app-evergreen && npm run build:dist && shx mv output/dist output/dist-app && npm run build:dev && shx mv output/dev output/dev-app",
     "artifact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
     "artifact:package": "cd dist && npm pack -q ./release && shx mv dojo-cli-build-app-* dojo-cli-build-app.tgz && cd ..",
     "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev",
@@ -58,7 +58,7 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@dojo/cli": "6.0.0-alpha.1",
+    "@dojo/cli": "6.0.0-alpha.2",
     "@dojo/scripts": "~4.0.2",
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/compression": "0.0.36",
@@ -105,7 +105,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "6.0.0-alpha.11",
+    "@dojo/webpack-contrib": "6.0.0-alpha.12",
     "brotli-webpack-plugin": "1.0.0",
     "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
